testing/tests/ui/no_template_attribute.stderr
error: no attribute 'template' found
 --> tests/ui/no_template_attribute.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
